2026-01-13 Added Exp section | make some adjustments

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
   <!-- ===== NAVIGATION BAR ===== -->
   <nav class="navbar" id="navbar">
     <div class="container">
-      <a href="#home" class="logo">Portfolio</a>
+
 
       <!-- Mobile Menu Toggle -->
       <div class="menu-toggle" id="menu-toggle">
@@ -44,6 +44,7 @@
       <ul class="nav-links" id="nav-links">
         <li><a href="#home" class="nav-link active">Home</a></li>
         <li><a href="projects.html" class="nav-link">Projects</a></li>
+        <li><a href="experience.html" class="nav-link">Experience</a></li>
         <li><a href="#skills" class="nav-link">Skills</a></li>
       </ul>
     </div>
@@ -68,6 +69,7 @@
           <a href="projects.html" class="btn btn-primary">View My Work</a>
         </div>
       </div>
+
     </div>
     <div class="scroll-indicator"></div>
   </section>
