--- a/projects.html
+++ b/projects.html
@@ -134,7 +134,7 @@
     <!-- ===== NAVIGATION BAR ===== -->
     <nav class="navbar" id="navbar">
         <div class="container">
-            <a href="index.html" class="logo">Portfolio</a>
+
 
             <!-- Mobile Menu Toggle -->
             <div class="menu-toggle" id="menu-toggle">
@@ -147,6 +147,7 @@
             <ul class="nav-links" id="nav-links">
                 <li><a href="index.html" class="nav-link">Home</a></li>
                 <li><a href="projects.html" class="nav-link active">Projects</a></li>
+                <li><a href="experience.html" class="nav-link">Experience</a></li>
                 <li><a href="index.html#skills" class="nav-link">Skills</a></li>
             </ul>
         </div>
@@ -274,7 +275,8 @@
                                         VPC from scratch, creating a realistic environment to understand how traffic
                                         flows between public and private subnets.
                                         I launched two Ubuntu EC2 instances in the same subnet and configured their
-                                        Security Groups to allow specific traffic from eachother only, verifying connectivity through ping
+                                        Security Groups to allow specific traffic from eachother only, verifying
+                                        connectivity through ping
                                         and traceroute commands.
                                         A key component was security and monitoring: I enabled VPC Flow Logs to capture
                                         traffic data, storing these logs in CloudWatch encrypted with a custom KMS key.
