sec practices for Auto Backup

--- a/projects.html
+++ b/projects.html
@@ -1568,7 +1568,11 @@ if __name__ == &quot;__main__&quot;:
                                         Security Practices
                                     </button>
                                     <div class="sec-content-wrapper" id="sec-content">
-                                        <p style="margin-top: var(--spacing-sm);">Will update this section soon</p>
+                                        <p style="margin-top: var(--spacing-sm);">
+                                            Uses KMS encryption at rest. Uses zero-trust IAM policy. Sends email that
+                                            has
+                                            information that isn't sensitive.
+                                        </p>
                                     </div>
                                 </div>
 
